--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "start:dev": "concurrently \"npm run server:dev\" \"wait-on tcp:3001 && npm run client:dev\"",
     "server": "cd server && npm start",
     "server:dev": "cd server && npm run dev",
-    "server:build": "cd server && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
     "client:build": "cd client && npm run build",
     "client:dev": "cd client && npm run dev",
-    "build": "npm run client:build && npm run server:build",
+    "build": "cd server && npm run build",
     "seed": "cd server && npm run seed",
     "render-build": "npm install && npm run build",
     "cypress": "npx cypress open",
-    "test": "npx cypress run"
+    "test": "npx cypress run --browser electron --headless"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +25,7 @@
     "@types/react": "^18.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "concurrently": "^8.2.2",
-    "cypress": "^13.17.0",
+    "cypress": "^13.13.1",
     "nodemon": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
