--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,4 +23,4 @@ workflows:
       # TODO: Add a new job to run the component tests
       - cypress/run:
           name: run-component-tests
-          cypress-command: npx cypress run -component
+          cypress-command: npx cypress run --component
